--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-dom": "^18.3.1",
     "framer-motion": "^11.0.8",
     "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "i18next": "^23.10.1",
+    "react-i18next": "^14.1.0",
+    "i18next-browser-languagedetector": "^7.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
